# common

./: .gitignore  README.md
MQCloud/MQCloud/: CAPI.h  CMakeLists.txt  CXXWrapperImplementation.cpp  CoreImplementation.cpp  MQCloud.h  MQCloud.hpp  MQCloud.vcxproj  MQCloud.vcxproj.filters  MQCloudImpl.h  packages.config
MQCloud/MQCloud/Wrappers/: MQCloud.i
MQCloud/MQCloud/Wrappers/DotNet/CSharp/: App.cs  CString.cs  CoreConfiguration.cs  CoreMessage.cs  CorePublishingSocketInterface.cs  CoreSubscriberSocketInterface.cs  CoreThreadManagementInterface.cs  EventsHandler.cs  ExtensiabiletyEventsHandler.cs  MQCloud.Net.csproj  MQCloud.Net.sln  MQCloud.cs  MQCloudPINVOKE.cs  Message.cs  SWIGTYPE_p_ServiceId.cs  SWIGTYPE_p_f___int.cs  SWIGTYPE_p_f___p_void.cs  SWIGTYPE_p_f___void.cs  SWIGTYPE_p_f_int__void.cs  (+15 more)
MQCloud/MQCloud/include/MQCloud/: API.hpp  BackEndConfiguration.hpp  BackEndFactory.hpp  CStringAdaptor.hpp  Delegates.hpp  EventsHandler.hpp  ExtensiabiletyEventsHandler.hpp  FrontEnd.hpp  GenericFunc.hpp  GenericSignal.hpp  MQCloud.h  MQCloud.hpp  Message.hpp  Protocol.pb.h  PublishingSocket.hpp  Socket.hpp  SubscriberSocket.hpp  TaskId.hpp  TaskManagerThread.hpp  ThreadManagement.hpp  UserMessage.hpp
MQCloud/MQCloud/src/: API.cpp  Protocol.pb.cc  TaskManagerThread.cpp
MQCloud/MQCloud/src/CXX/: CXXWrapperImplementation.cpp  CoreImplementation.cpp  NodeManagerProtocol.pb.cc  Protocol.pb.cc
MQCloud/MQCloud/src/Internal/: ConnectionsHandler.cpp  ExchangeEventsHandler.cpp  ExchangeEventsManager.cpp  ResponseHandler.cpp  ThreadManagerTbbImpl.cpp
(+174 files in other folders)
